# no-comment

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: languages.rs  lib.rs  main.rs  without_comments.rs
src/tests/: c.rs  custom.rs  haskell.rs  mod.rs  python.rs  rust.rs
