[package]
name = "without_comments"
version = "0.0.1"
authors = ["gorilskij <github.com/gorilskij>"]
edition = "2018"
license = "Apache-2.0"
description = "Remove rust-style line and block comments from a char iterator."
#homepage = "TODO CRATES LINK"
repository = "github.com/gorilskij/without-comments"
readme = "README.md"

#[dependencies]